Corrigindo um detalhe para evitar problemas